--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="fourhover x-align-middle">
                         <div class="x-align-block text-padding">
                             <div><span class="titlefont"> dasom </span></div>
-                            <div><span class="categoryfont">web / branding </span></div>
+                            <div><span class="categoryfont">branding / web</span></div>
                         </div>
 
                     </div>
@@ -91,7 +91,7 @@
                     <div class="fivehover x-align-middle">
                         <div class="x-align-block text-padding">
                             <div><span class="titlefont"> sopoong in seoul </span></div>
-                            <div><span class="categoryfont">app / branding </span></div>
+                            <div><span class="categoryfont">branding / app</span></div>
                         </div>
 
 
@@ -202,7 +202,7 @@
                     <div class="fourhover x-align-middle">
                         <div class="x-align-block text-padding">
                             <div><span class="titlefont"> dasom </span></div>
-                            <div><span class="categoryfont">web / branding </span></div>
+                            <div><span class="categoryfont">branding / web </span></div>
                         </div>
 
                     </div>
@@ -217,7 +217,7 @@
                     <div class="fivehover x-align-middle">
                         <div class="x-align-block text-padding">
                             <div><span class="titlefont"> sopoong in seoul </span></div>
-                            <div><span class="categoryfont">app / branding </span></div>
+                            <div><span class="categoryfont">branding / app</span></div>
                         </div>
 
 
