--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
 
                 <p><p><p>
                 <div class="mail"><a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span><p></a></div>
-                <img src="images/phone.svg"><span class="profiletext3">+ 82 0 2535 0813</span><p>
+                <img src="images/phone.svg"><span class="profiletext3">+ 82 10 2535 0813</span><p>
                 <div class="resume"><a href="resume.pdf"><img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p></p></a></div>
             </p>
             </div>
@@ -111,7 +111,7 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                     <div class="fourhover x-align-middle">
                         <div class="x-align-block text-padding">
                             <div><span class="titlefont"> dasom </span></div>
-                            <div><span class="categoryfont">web / branding </span></div>
+                            <div><span class="categoryfont">branding / web </span></div>
                         </div>
 
                     </div>
@@ -125,7 +125,7 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                     <div class="fivehover x-align-middle">
                         <div class="x-align-block text-padding">
                             <div><span class="titlefont"> sopoong in seoul </span></div>
-                            <div><span class="categoryfont">app / branding </span></div>
+                            <div><span class="categoryfont">branding / app</span></div>
                         </div>
 
 
@@ -218,7 +218,7 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
 
 
                     <a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span></a><p>
-                    <img src="images/phone.svg"><span class="profiletext3">+ 82 0 2535 0813</span><p>
+                    <img src="images/phone.svg"><span class="profiletext3">+ 82 10 2535 0813</span><p>
                     <a href="resume.pdf"><img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p></p></a>
                 </p>
 
@@ -284,7 +284,7 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                         <div class="fourhover x-align-middle">
                             <div class="x-align-block text-padding">
                                 <div><span class="titlefont"> dasom </span></div>
-                                <div><span class="categoryfont">web / branding </span></div>
+                                <div><span class="categoryfont">branding / web</span></div>
                             </div>
 
                         </div>
@@ -299,7 +299,7 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                         <div class="fivehover x-align-middle">
                             <div class="x-align-block text-padding">
                                 <div><span class="titlefont"> sopoong in seoul </span></div>
-                                <div><span class="categoryfont">app / branding </span></div>
+                                <div><span class="categoryfont">branding / app</span></div>
                             </div>
 
 
