--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <!DOCTYPE html>
 <html>
+<body bgcolor="white">
 <link rel="shortcut icon" href="images/symbol-01.png">
 <title>Hello! Dasom</title>
 <link rel=stylesheet href="style.css">
