--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <html>
+<body bgcolor="white">
 <link rel="shortcut icon" href="images/symbol-01.png">
 <title>Hello! Dasom</title>
 <link rel="shortcut icon" href="images/symbol-01.png">
