--- a/whoop.html
+++ b/whoop.html
@@ -1,4 +1,5 @@
 <html>
+<body bgcolor="white">
 <link rel="shortcut icon" href="images/symbol-01.png">
 <title>Hello! Dasom</title>
 <link rel=stylesheet href="style.css">
