--- a/whoop.html
+++ b/whoop.html
@@ -1,6 +1,6 @@
-<html>
+<html><link rel="shortcut icon" href="images/symbol-01.png">
 <body bgcolor="white">
-<link rel="shortcut icon" href="images/symbol-01.png">
+
 <title>Hello! Dasom</title>
 <link rel=stylesheet href="style.css">
 <!--<link rel=stylesheet href="reset.css">-->
