--- a/sopoong.html
+++ b/sopoong.html
@@ -1,4 +1,5 @@
-<html><link rel="shortcut icon" href="images/symbol-01.png">
+<html>
+<link rel="shortcut icon" href="images/symbol-01.png">
 <body bgcolor="white">
 
 <title>Hello! Dasom</title>
