--- a/01.html
+++ b/01.html
@@ -28,7 +28,7 @@
         </div>
     </header>
 
-    <div class="left"><a href="dasomis.html"><img src="images/left.svg"></a></div>
+    <div class="left"><a href="07.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
             <span class="detailtitle">petfit</span><p>
@@ -46,7 +46,7 @@
 
     <div class="works"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
     <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
-    <div class="right"><a href="whoop.html"><img src="images/right.svg"></a></div>
+    <div class="right"><a href="02.html"><img src="images/right.svg"></a></div>
 </div>
 
 
