--- a/05.html
+++ b/05.html
@@ -1,4 +1,5 @@
-<html><link rel="shortcut icon" href="images/symbol-01.png">
+<html>
+<link rel="shortcut icon" href="images/symbol-01.png">
 <body bgcolor="white">
 
 <title>Hello! Dasom</title>
@@ -27,14 +28,14 @@
         </div>
     </header>
 
-    <div class="left"><a href="gvideo.html"><img src="images/left.svg"></a></div>
+    <div class="left"><a href="04.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">dasom is</span><p>
+            <span class="detailtitle">sopoong in seoul</span><p>
         <span class="detailcategory">
-               motion graphic <br> 2014.03-2014.11
+            branding / app <br> 2013.03-2013.10
         </span>
-            <div class="people">  </div>
+            <div class="people2">  </div>
 
         </div>
         <div class="detail2">
@@ -45,7 +46,7 @@
 
     <div class="works"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
     <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
-    <div class="right"><a href="petfit.html"><img src="images/right.svg"></a></div>
+    <div class="right"><a href="06.html"><img src="images/right.svg"></a></div>
 </div>
 
 
@@ -61,16 +62,16 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">dasom is</span><p>
+            <span class="detailtitle">sopoong in seoul</span><p>
 
 
              <span class="detailcategory">
-            motion graphic <br> 2014.03-2014.11
+            branding / app <br> 2013.03-2013.10
         </span>
 
 
 
-            <div class="people">  </div>
+            <div class="people2">  </div>
 
         </div>
     </div>
