--- a/index.html
+++ b/index.html
@@ -29,111 +29,144 @@
 
     </header>
     <section>
-        <div class="container">
+            <div class="container">
 
-            <div class="box one">
-                <a href="petfit.html">
-                    <div class="onehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> petfit </span></div>
-                            <div><span class="categoryfont">app design </span></div>
+                <div class="box one">
+                    <a href="01.html">
+                        <div class="onehover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 01 </span></div>
+                                <div><span class="categoryfont">branding </span></div>
+                            </div>
+
                         </div>
-
-                    </div>
-                </a>
-            </div>
+                    </a>
+                </div>
 
 
-            <div></div>
+                <div></div>
 
 
-            <div class="box two">
-                <a href="whoop.html">
-                    <div class="twohover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> whoop </span></div>
-                            <div><span class="categoryfont">app design </span></div>
+                <div class="box two">
+                    <a href="02.html">
+                        <div class="twohover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 02 </span></div>
+                                <div><span class="categoryfont">branding  </span></div>
+                            </div>
+
                         </div>
-
-                    </div>
-                </a>
-            </div>
+                    </a>
+                </div>
 
 
-            <div class="box three">
-                <a href="movit.html">
-                    <div class="threehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> movit </span></div>
-                            <div><span class="categoryfont">app design </span></div>
+                <div class="box three">
+                    <a href="03.html">
+                        <div class="threehover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 03 </span></div>
+                                <div><span class="categoryfont">branding </span></div>
+                            </div>
+
                         </div>
+                    </a>
 
-                    </div>
-                </a>
-
-            </div>
+                </div>
 
 
-            <div class="box four">
-                <a href="dasom.html">
-                    <div class="fourhover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> dasom </span></div>
-                            <div><span class="categoryfont">branding / web</span></div>
+                <div class="box four">
+                    <a href="04.html">
+                        <div class="fourhover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 04 </span></div>
+                                <div><span class="categoryfont">branding</span></div>
+                            </div>
+
                         </div>
+                    </a>
 
-                    </div>
-                </a>
-
-            </div>
+                </div>
 
 
-            <div class="box five">
-                <a href="sopoong.html">
-                    <div class="fivehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> sopoong in seoul </span></div>
-                            <div><span class="categoryfont">branding / app</span></div>
+                <div class="box five">
+                    <a href="05.html">
+                        <div class="fivehover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 05 </span></div>
+                                <div><span class="categoryfont">branding</span></div>
+                            </div>
+
+
                         </div>
+                    </a>
+
+                </div>
 
 
-                    </div>
-                </a>
+                <div class="box six">
+                    <a href="06.html">
+                        <div class="sixhover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 06 </span></div>
+                                <div><span class="categoryfont">motion graphic</span></div>
+                            </div>
 
-            </div>
-
-
-            <div class="box seven">
-                <a href="gvideo.html">
-                    <div class="sevenhover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> gvideo </span></div>
-                            <div><span class="categoryfont">motion graphic</span></div>
                         </div>
-
-                    </div>
-                </a>
-            </div>
+                    </a>
+                </div>
 
 
-            <div class="box eight">
-                <a href="dasomis.html">
-                    <div class="eighthover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> dasom is </span></div>
-                            <div><span class="categoryfont">motion graphic </span></div>
+                <div class="box seven">
+                    <a href="07.html">
+                        <div class="sevenhover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 07 </span></div>
+                                <div><span class="categoryfont">motion graphic </span></div>
+                            </div>
+
                         </div>
+                    </a>
+                </div>
 
-                    </div>
-                </a>
+                <div class="box eight">
+                    <a href="index.html">
+                        <div class="eighthover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 08 </span></div>
+                                <div><span class="categoryfont"> branding </span></div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+
+                <div class="box nine">
+                    <a href="index.html">
+                        <div class="ninehover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 09 </span></div>
+                                <div><span class="categoryfont"> branding </span></div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="box ten">
+                    <a href="index.html">
+                        <div class="tenhover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> 10 </span></div>
+                                <div><span class="categoryfont"> branding </span></div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+
+
             </div>
-
-            <div class="box six"></div>
-            <div class="box nine"></div>
-            <div class="box ten"></div>
-
-
-        </div>
 
     </section>
 
@@ -154,13 +187,12 @@
     </header>
     <section>
         <div class="container">
-            <a href="petfit.html">
+            <a href="01.html">
                 <div class="box one">
 
                     <div class="onehover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> petfit </span></div>
-                            <div><span class="categoryfont">app design</span></div>
+
                         </div>
                     </div>
                 </div>
@@ -170,12 +202,11 @@
             <div></div>
 
 
-            <a href="whoop.html">
+            <a href="02.html">
                 <div class="box two">
                     <div class="twohover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> mari </span></div>
-                            <div><span class="categoryfont">app design </span></div>
+
                         </div>
 
                     </div>
@@ -183,13 +214,12 @@
                 </div> </a>
 
 
-            <a href="movit.html">
+            <a href="03.html">
                 <div class="box three">
 
                     <div class="threehover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> movit </span></div>
-                            <div><span class="categoryfont">app design </span></div>
+
                         </div>
 
                     </div>
@@ -198,13 +228,12 @@
                 </div> </a>
 
 
-            <a href="dasom.html">
+            <a href="04.html">
                 <div class="box four">
 
                     <div class="fourhover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> dasom </span></div>
-                            <div><span class="categoryfont">branding / web </span></div>
+
                         </div>
 
                     </div>
@@ -213,13 +242,12 @@
                 </div> </a>
 
 
-            <a href="sopoong.html">
+            <a href="05.html">
                 <div class="box five">
 
                     <div class="fivehover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> sopoong in seoul </span></div>
-                            <div><span class="categoryfont">branding / app</span></div>
+
                         </div>
 
 
@@ -231,13 +259,12 @@
 
 
 
-            <a href="gvideo.html">
+            <a href="06.html">
                 <div class="box seven">
 
                     <div class="sevenhover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> gvideo </span></div>
-                            <div><span class="categoryfont">motion graphic </span></div>
+
                         </div>
 
                     </div>
@@ -245,13 +272,12 @@
                 </div> </a>
 
 
-            <a href="dasomis.html">
+            <a href="07.html">
                 <div class="box eight">
 
                     <div class="eighthover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> dasom is </span></div>
-                            <div><span class="categoryfont">motion graphic </span></div>
+
                         </div>
 
                     </div>
