--- a/profile.html
+++ b/profile.html
@@ -43,9 +43,11 @@
 
 
                 <span class="detailtext2">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.
-UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에서 활동하며 앱 디자인 작업을 하고,
-관련 분야의 공모전이나 산학 프로젝트 등에도 참여하는 등 항상 열정적인 자세로 임하고 있다.
-그 외에 브랜딩과 모션그래픽 분야 프로젝트 또한 재미있게 작업하고 있다.
+ 브랜드 디자인에 관심이 많아 관련 세미나와 산학 프로젝트에 적극적으로 참여하고
+ 틈틈히 브랜드 관련 개인 작업을 진행하기도 하였다.
+
+
+그 외에 수업 외에 창업 동아리에서 활동하며 UI/GUI 디자인 작업을 한 경험도 있다.
 아기자기하고 귀여운 그래픽들을 좋아하고 작업 또한 나의 색깔을 담아서 진행하고 있다. </span> <p>
 
 
@@ -60,114 +62,146 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
         </div>
 
 
-        <div class="container">
 
-            <div class="box one">
-                <a href="petfit.html">
-                    <div class="onehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> petfit </span></div>
-                            <div><span class="categoryfont">app design </span></div>
-                        </div>
+<div class="container">
 
-                    </div>
-                </a>
-            </div>
-
-
-            <div></div>
-
-
-            <div class="box two">
-                <a href="whoop.html">
-                    <div class="twohover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> whoop </span></div>
-                            <div><span class="categoryfont">app design </span></div>
-                        </div>
-
-                    </div>
-                </a>
-            </div>
-
-
-            <div class="box three">
-                <a href="movit.html">
-                    <div class="threehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> movit </span></div>
-                            <div><span class="categoryfont">app design </span></div>
-                        </div>
-
-                    </div>
-                </a>
+    <div class="box one">
+        <a href="01.html">
+            <div class="onehover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 01 </span></div>
+                    <div><span class="categoryfont">branding </span></div>
+                </div>
 
             </div>
+        </a>
+    </div>
 
 
-            <div class="box four">
-                <a href="dasom.html">
-                    <div class="fourhover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> dasom </span></div>
-                            <div><span class="categoryfont">branding / web </span></div>
-                        </div>
-
-                    </div>
-                </a>
-
-            </div>
+    <div></div>
 
 
-            <div class="box five">
-                <a href="sopoong.html">
-                    <div class="fivehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> sopoong in seoul </span></div>
-                            <div><span class="categoryfont">branding / app</span></div>
-                        </div>
-
-
-                    </div>
-                </a>
+    <div class="box two">
+        <a href="02.html">
+            <div class="twohover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 02 </span></div>
+                    <div><span class="categoryfont">branding  </span></div>
+                </div>
 
             </div>
+        </a>
+    </div>
 
 
-            <div class="box seven">
-                <a href="gvideo.html">
-                    <div class="sevenhover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> gvideo </span></div>
-                            <div><span class="categoryfont">motion graphic </span></div>
-                        </div>
+    <div class="box three">
+        <a href="03.html">
+            <div class="threehover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 03 </span></div>
+                    <div><span class="categoryfont">branding </span></div>
+                </div>
 
-                    </div>
-                </a>
             </div>
+        </a>
+
+    </div>
 
 
-            <div class="box eight">
-                <a href="dasomis.html">
-                    <div class="eighthover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> dasom is </span></div>
-                            <div><span class="categoryfont">motion graphic </span></div>
-                        </div>
+    <div class="box four">
+        <a href="04.html">
+            <div class="fourhover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 04 </span></div>
+                    <div><span class="categoryfont">branding</span></div>
+                </div>
 
-                    </div>
-                </a>
             </div>
+        </a>
 
-            <div class="box six"></div>
-            <div class="box nine"></div>
-            <div class="box ten"></div>
+    </div>
 
 
-        </div>
+    <div class="box five">
+        <a href="05.html">
+            <div class="fivehover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 05 </span></div>
+                    <div><span class="categoryfont">branding</span></div>
+                </div>
 
-    </section>
 
+            </div>
+        </a>
+
+    </div>
+
+
+    <div class="box six">
+        <a href="06.html">
+            <div class="sixhover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 06 </span></div>
+                    <div><span class="categoryfont">motion graphic</span></div>
+                </div>
+
+            </div>
+        </a>
+    </div>
+
+
+    <div class="box seven">
+        <a href="07.html">
+            <div class="sevenhover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 07 </span></div>
+                    <div><span class="categoryfont">motion graphic </span></div>
+                </div>
+
+            </div>
+        </a>
+    </div>
+
+    <div class="box eight">
+        <a href="index.html">
+            <div class="eighthover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 08 </span></div>
+                    <div><span class="categoryfont"> branding </span></div>
+                </div>
+
+            </div>
+        </a>
+    </div>
+
+
+    <div class="box nine">
+        <a href="index.html">
+            <div class="eighthover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 10 </span></div>
+                    <div><span class="categoryfont"> branding </span></div>
+                </div>
+
+            </div>
+        </a>
+    </div>
+    <div class="box ten">
+        <a href="index.html">
+            <div class="eighthover x-align-middle">
+                <div class="x-align-block text-padding">
+                    <div><span class="titlefont"> 09 </span></div>
+                    <div><span class="categoryfont"> branding </span></div>
+                </div>
+
+            </div>
+        </a>
+    </div>
+
+
+</div>
+
+</section>
 
 </div>
 
@@ -197,12 +231,6 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
 
                     <span class="profiletext">윤다솜   </span> <span class="profiletext2"> dasom yoon </span>
                     <p>
-                        <!--<span class="detailtext2">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.-->
-                        <!--UI / UX  디자인에 관심이 많아 학교 수업 외에 창업 동아리에서 활동하며 앱 디자인 작업을 하고,-->
-                        <!--관련 분야의 공모전이나 산학 프로젝트 등에도 참여하는 등 항상 열정적인 자세로 임하고 있다.-->
-                        <!--그 외에도 BRANDING / MOTION GRAPHIC 분야 프로젝트 또한 재미있게 작업하고 있다.-->
-                        <!--나를 주제로 브랜딩 작업을 하고, 그 아이덴티티를 바탕으로 모션그래픽 영상을 제작하기도 했다.-->
-                        <!--아기자기하고 귀여운 그래픽들을 좋아하고 작업 또한 나의 색깔을 담아서 진행하고 있다. </span>-->
 
 
                     <p>
@@ -233,13 +261,12 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
 
 
             <div class="container">
-                <a href="petfit.html">
+                <a href="01.html">
                     <div class="box one">
 
                         <div class="onehover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> petfit </span></div>
-                                <div><span class="categoryfont">app design</span></div>
+
                             </div>
                         </div>
                     </div>
@@ -249,12 +276,11 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                 <div></div>
 
 
-                <a href="whoop.html">
+                <a href="02.html">
                     <div class="box two">
                         <div class="twohover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> mari </span></div>
-                                <div><span class="categoryfont">app design </span></div>
+
                             </div>
 
                         </div>
@@ -262,13 +288,12 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                     </div> </a>
 
 
-                <a href="movit.html">
+                <a href="03.html">
                     <div class="box three">
 
                         <div class="threehover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> movit </span></div>
-                                <div><span class="categoryfont">app design </span></div>
+
                             </div>
 
                         </div>
@@ -277,13 +302,12 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                     </div> </a>
 
 
-                <a href="dasom.html">
+                <a href="04.html">
                     <div class="box four">
 
                         <div class="fourhover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> dasom </span></div>
-                                <div><span class="categoryfont">branding / web</span></div>
+
                             </div>
 
                         </div>
@@ -292,13 +316,12 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                     </div> </a>
 
 
-                <a href="sopoong.html">
+                <a href="05.html">
                     <div class="box five">
 
                         <div class="fivehover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> sopoong in seoul </span></div>
-                                <div><span class="categoryfont">branding / app</span></div>
+
                             </div>
 
 
@@ -310,13 +333,12 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
 
 
 
-                <a href="gvideo.html">
+                <a href="06.html">
                     <div class="box seven">
 
                         <div class="sevenhover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> gvideo </span></div>
-                                <div><span class="categoryfont">motion graphic </span></div>
+
                             </div>
 
                         </div>
@@ -324,13 +346,12 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                     </div> </a>
 
 
-                <a href="dasomis.html">
+                <a href="07.html">
                     <div class="box eight">
 
                         <div class="eighthover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> dasom is </span></div>
-                                <div><span class="categoryfont">motion graphic </span></div>
+
                             </div>
 
                         </div>
