--- a/06.html
+++ b/06.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <div class="left"><a href="whoop.html"><img src="images/left.svg"></a></div>
+    <div class="left"><a href="02.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
             <span class="detailtitle">gvideo</span><p>
@@ -45,7 +45,7 @@
 
     <div class="works"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
     <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
-    <div class="right"><a href="dasomis.html"><img src="images/right.svg"></a></div>
+    <div class="right"><a href="07.html"><img src="images/right.svg"></a></div>
 </div>
 
 
