--- a/07.html
+++ b/07.html
@@ -1,5 +1,4 @@
-<html>
-<link rel="shortcut icon" href="images/symbol-01.png">
+<html><link rel="shortcut icon" href="images/symbol-01.png">
 <body bgcolor="white">
 
 <title>Hello! Dasom</title>
@@ -28,14 +27,14 @@
         </div>
     </header>
 
-    <div class="left"><a href="dasom.html"><img src="images/left.svg"></a></div>
+    <div class="left"><a href="06.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">sopoong in seoul</span><p>
+            <span class="detailtitle">dasom is</span><p>
         <span class="detailcategory">
-            branding / app <br> 2013.03-2013.10
+               motion graphic <br> 2014.03-2014.11
         </span>
-            <div class="people2">  </div>
+            <div class="people">  </div>
 
         </div>
         <div class="detail2">
@@ -46,7 +45,7 @@
 
     <div class="works"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
     <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
-    <div class="right"><a href="gvideo.html"><img src="images/right.svg"></a></div>
+    <div class="right"><a href="01.html"><img src="images/right.svg"></a></div>
 </div>
 
 
@@ -62,16 +61,16 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">sopoong in seoul</span><p>
+            <span class="detailtitle">dasom is</span><p>
 
 
              <span class="detailcategory">
-            branding / app <br> 2013.03-2013.10
+            motion graphic <br> 2014.03-2014.11
         </span>
 
 
 
-            <div class="people2">  </div>
+            <div class="people">  </div>
 
         </div>
     </div>
