--- a/01.html
+++ b/01.html
@@ -31,7 +31,7 @@
     <div class="left"><a href="07.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">petfit</span><p>
+            <span class="detailtitle">branding</span><p>
         <span class="detailcategory">
             mobile app <br> 2014.09-2015.01
         </span>
@@ -62,7 +62,7 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">petfit</span><p>
+            <span class="detailtitle">branding</span><p>
 
 
              <span class="detailcategory">
