--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <div class="eighthover x-align-middle">
                             <div class="x-align-block text-padding">
                                 <div><span class="titlefont"> 08 </span></div>
-                                <div><span class="categoryfont"> branding </span></div>
+                                <div><span class="categoryfont">motion graphic </span></div>
                             </div>
 
                         </div>
@@ -144,7 +144,7 @@
                     <a href="index.html">
                         <div class="ninehover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 09 </span></div>
+                                <div><span class="titlefont"> 10 </span></div>
                                 <div><span class="categoryfont"> branding </span></div>
                             </div>
 
@@ -157,7 +157,7 @@
                     <a href="index.html">
                         <div class="tenhover x-align-middle">
                             <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 10 </span></div>
+                                <div><span class="titlefont"> 09 </span></div>
                                 <div><span class="categoryfont"> branding </span></div>
                             </div>
 
@@ -253,6 +253,18 @@
 
                     </div>
 
+                </div>
+
+
+                <div class="box six">
+
+                    <div class="eighthover x-align-middle">
+                        <div class="x-align-block text-padding">
+
+                        </div>
+
+                    </div>
+
                 </div> </a>
 
 
@@ -283,6 +295,28 @@
                     </div>
 
                 </div> </a>
+
+            <div class="box nine">
+
+                <div class="eighthover x-align-middle">
+                    <div class="x-align-block text-padding">
+
+                    </div>
+
+                </div>
+
+            </div> </a>
+
+            <div class="box ten">
+
+                <div class="eighthover x-align-middle">
+                    <div class="x-align-block text-padding">
+
+                    </div>
+
+                </div>
+
+            </div> </a>
 
 
 
