--- a/profile.html
+++ b/profile.html
@@ -26,6 +26,7 @@
 
 
     </header>
+
     <section>
 
 
@@ -46,6 +47,8 @@
  브랜드 디자인에 관심이 많아 관련 세미나와 산학 프로젝트에 적극적으로 참여하고
  틈틈히 브랜드 관련 개인 작업을 진행하기도 하였다.
 
+ 최근에는 P.I 디자인 작업을 하고 코딩하는 디자이너 세미나 프로그램을 통해 개인 포트폴리오 페이지를 직접 디자인, 코딩하였다.
+
 
 그 외에 수업 외에 창업 동아리에서 활동하며 UI/GUI 디자인 작업을 한 경험도 있다.
 아기자기하고 귀여운 그래픽들을 좋아하고 작업 또한 나의 색깔을 담아서 진행하고 있다. </span> <p>
@@ -53,10 +56,14 @@
 
 
                 <p><p><p>
+                <div class="iconbox">
                 <div class="mail"><a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span><p></a></div>
                 <img src="images/phone.svg"><span class="profiletext3">+ 82 10 2535 0813</span><p>
                 <div class="resume"><a href="resume.pdf"><img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p></p></a></div>
-            </p>
+
+
+            </div>
+
             </div>
 
         </div>
@@ -167,7 +174,7 @@
             <div class="eighthover x-align-middle">
                 <div class="x-align-block text-padding">
                     <div><span class="titlefont"> 08 </span></div>
-                    <div><span class="categoryfont"> branding </span></div>
+                    <div><span class="categoryfont"> motion graphic </span></div>
                 </div>
 
             </div>
@@ -365,6 +372,7 @@
             </div>
 
     </section>
+
 
 
 </div>
