--- a/profile.html
+++ b/profile.html
@@ -56,10 +56,10 @@
 
 
                 <p><p><p>
-                <div class="iconbox">
-                <div class="mail"><a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span><p></a></div>
+                <div class="contact">  <div class="mail"><a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span><p></a></div>
                 <img src="images/phone.svg"><span class="profiletext3">+ 82 10 2535 0813</span><p>
                 <div class="resume"><a href="resume.pdf"><img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p></p></a></div>
+
 
 
             </div>
@@ -334,6 +334,18 @@
 
                         </div>
 
+                    </div>
+
+
+                    <div class="box six">
+
+                        <div class="eighthover x-align-middle">
+                            <div class="x-align-block text-padding">
+
+                            </div>
+
+                        </div>
+
                     </div> </a>
 
 
@@ -365,11 +377,38 @@
 
                     </div> </a>
 
+                <div class="box nine">
+
+                    <div class="eighthover x-align-middle">
+                        <div class="x-align-block text-padding">
+
+                        </div>
+
+                    </div>
+
+                </div> </a>
+
+                <div class="box ten">
+
+                    <div class="eighthover x-align-middle">
+                        <div class="x-align-block text-padding">
+
+                        </div>
+
+                    </div>
+
+                </div> </a>
+
 
 
 
 
             </div>
+
+
+
+
+        </div>
 
     </section>
 
